force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/QTB_Invoice_Batch_by_Bill_Cycle__mdt.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-727: Custom Metadata for selecting Correct Invoice Batch according to Selected Bill Cycle date.</description>
    <label>Invoice Batch by Bill Cycle</label>
    <pluralLabel>Invoice Batch by Bill Cycles</pluralLabel>
</CustomObject>