force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/fields/QTB_Bill_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>QTB_Bill_Cycle_Day__c</fullName>
    <description>#SFCPQBLG-727: Contains Bill Cycle day for Invoicing.</description>
    <label>Bill Cycle Day</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>