force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <description>#SFCPQBLG-727: For which country the record is being created.</description>
    <label>Country</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>