force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/fields/QTB_Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>QTB_Invoice_Batch__c</fullName>
    <description>#SFCPQBLG-727: Contains Invoice Batch Name.</description>
    <label>Invoice Batch</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>