force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/fields/QTB_Legal_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Number__c</fullName>
    <label>Legal Entity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>