force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/fields/QTB_Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary_Product_Line__c</fullName>
    <label>Primary Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>