force-app/main/default/objects/QTB_Invoice_Batch_by_Bill_Cycle__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>QTB_Bill_Cycle_Day__c</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Invoice_Batch__c</columns>
    <columns>QTB_Primary_Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>